# confluence-mcp

./: .env.example  .gitignore  README.md  config.example.json  config.json  pyproject.toml  requirements.txt  server.py  start_agent.sh  test_new_search.py  test_search.py
.chainlit/: config.toml
src/confluence_mcp/: __init__.py  server.py
src/confluence_mcp/agent/: app.py  client.py  graph.py  llm.py
